<resources>
    <string name="app_name">YUM YUM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="don_t_have_an_account_create_account">Don\'t have an account? CREATE ACCOUNT</string>
    <string name="or_login_with">Or Login With</string>
    <string name="hello">Hello.</string>
    <string name="welcome_back">Welcome Back.</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="let_s_get_started">Let\'s get started.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="favourites">FAVOURITES</string>
    <string name="plans">PLANS</string>
    <string name="logout">Logout</string>
    <string name="let_s_cook_something_new">Let\'s cook something new!</string>
    <string name="popular_meals_in_country">Popular meals in country</string>
    <string name="categories">Categories</string>
    <string name="instructions">Instructions</string>
    <string name="countries">Countries</string>
    <string name="popular_meals">Popular meals</string>
    <string name="see_all_meal_categories">See All Meal Categories</string>
    <string name="see_all_meals_categories">See All Meals Categories</string>
    <string name="see_popular_meals_in_the_country">See Popular Meals in the Country</string>
    <string name="meals_sorted_just_for_you">Meals Sorted Just For You!</string>
    <string name="most_loved_dishes">Most Loved Dishes</string>
    <string name="discover_all_categories">Discover All Categories!</string>
    <string name="must_try_national_dishes">Must-Try National Dishes!</string>
    <string name="web_client_id">823975160432-r6g30in1fnrgveuji0uh6svujqft6oo6.apps.googleusercontent.com</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="continue_as_a_guest">Continue as a Guest</string>
    <string name="yummy_yummy">YUMMY YUMMY</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="all_ingredients">All Ingredients</string>
    <string name="all_categories">All Categories</string>
    <string name="all_countries">All Countries</string>
    <string name="hi_chief">Hi, Chief!</string>
    <string name="default_web_client_id">823975160432-r6g30in1fnrgveuji0uh6svujqft6oo6.apps.googleusercontent.com</string>
</resources>