<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="32dp"
    android:layout_marginHorizontal="32dp"
    tools:context=".uiLayer.authentication.login.LoginFragment">
    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login"
        android:layout_marginTop="@dimen/_100sdp"
        android:layout_marginVertical="32dp"
        android:id="@+id/iv_login_icon"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/iv_login_icon"
        android:id="@+id/hello_text_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hello_text_layout"
        android:orientation="vertical"
        android:layout_marginVertical="32dp">

        <EditText
            android:id="@+id/et_login_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/et_login_password"
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:layout_marginTop="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/login"
            android:layout_marginTop="@dimen/_12sdp"
            android:textSize="16sp"/>
        <ProgressBar
            android:visibility="gone"
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:id="@+id/login_progress_bar"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_guest_option"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/continue_as_a_guest"
            android:layout_gravity="center"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_in_with"
            android:textSize="@dimen/_12sdp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:textColor="#919191"
            android:textStyle= "bold"/>
        <ImageView
            android:id="@+id/iv_login_with_google"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/google"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_below="@+id/form_layout"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/create_account"
            android:layout_marginStart="12dp"
            android:id="@+id/tv_login_create_account"/>

    </LinearLayout>




</RelativeLayout>