<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="32dp"
    android:layout_marginHorizontal="32dp"
    tools:context=".uiLayer.authentication.signup.SignupFragment">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/signup"
        android:layout_marginVertical="32dp"
        android:id="@+id/iv_sign_up_pic"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/iv_sign_up_pic"
        android:id="@+id/LL_hello_text_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/let_s_get_started"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_signup_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LL_hello_text_layout"
        android:orientation="vertical"
        android:layout_marginVertical="32dp">

        <EditText
            android:id="@+id/et_signup_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/et_signup_password"
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/et_signup_confirm_password"
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:layout_marginTop="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup_create_account"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/create_account"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            />
        <ProgressBar
            android:visibility="gone"
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:id="@+id/pb_signup"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LL_signup_form_layout"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/login"
            android:layout_marginStart="12dp"
            android:id="@+id/tv_signup_loginbtn"/>
    </LinearLayout>
</RelativeLayout>