<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uiLayer.search.classes.SearchFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/sv_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/edit_text_bg"
        app:queryHint="Search Here For Meals"/>

    <TextView
        android:id="@+id/tv_search_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/all_ingredients"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_search"
        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/somebold"
        android:textColor="@color/pink"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_ingredients"
        tools:listitem="@layout/ingredients_item"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_ingredients"/>

    <TextView
        android:id="@+id/tv_search_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/all_categories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_search_ingredients"
        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/somebold"
        android:textColor="@color/pink"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_categories"
        android:layout_width="wrap_content"
        tools:listitem="@layout/category_item"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_categories"/>

    <TextView
        android:id="@+id/tv_search_areas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/all_countries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_search_categories"
        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/somebold"
        android:textColor="@color/pink"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_areas"
        android:layout_width="wrap_content"
        tools:listitem="@layout/country_item"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_areas"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_search_lost_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/lose"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>