<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    tools:context=".uiLayer.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/ll_home_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tv_home_header"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="Hi, Khaled!"
                    android:fontFamily="@font/sign"
                    android:textColor="@color/myPrimary"
                    android:textStyle="bold"
                    android:textSize="@dimen/_20ssp"/>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_logout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/somebold"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"/>


            </LinearLayout>

            <TextView
                android:id="@+id/tv_random_meal_header"
                android:fontFamily="@font/somebold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_29sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/myPrimary"
                android:textSize="@dimen/_18ssp"
                android:text="@string/let_s_cook_something_new"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_home_header" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_random_meal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_15sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_random_meal_header">

                <ImageView
                    android:id="@+id/iv_random_meal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:scaleType="centerCrop"
                    android:background="@color/myPrimary" />

                <TextView
                    android:id="@+id/tv_random_meal_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="Random meal name"
                    android:gravity="center"
                    android:fontFamily="@font/bomb"
                    android:background="@color/white"
                    android:textColor="@color/pink"
                    android:padding="@dimen/_10sdp"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_popular_meals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/popular_meals_in_country"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_random_meal"
                android:textSize="@dimen/_16ssp"
                android:fontFamily="@font/somebold"
                android:textColor="@color/pink"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular_meals"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/tv_popular_meals"/>

            <TextView
                android:id="@+id/tv_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/categories"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_popular_meals"
                android:textSize="@dimen/_16ssp"
                android:fontFamily="@font/somebold"
                android:textColor="@color/pink"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_categories"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/tv_categories"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>